--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <Html>
   <head>
   <title>my portfilo</title>  
- <link rel="styleshet" herf="style.css">
+ <link rel="styleshet" herf="Style.css">
   </head>
 <body>
   I am s.m.subahan,iam studing diploma
