--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <link rel="styleshet" herf="Style.css">
   </head>
 <body>
-  I am s.m.subahan,iam studing diploma
+  I am s.m.subahan,iam studing diploma in tirupati
 </body>
 
 </Html>
