--- a/index.html
+++ b/index.html
@@ -1,10 +1,68 @@
 <Html>
   <head>
   <title>my portfilo</title>  
- <link rel="styleshet" herf="Style.css">
-  </head>
-<body>
-  I am s.m.subahan,iam studing diploma in tirupati
-</body>
+ <link rel="stylesheet" href="Style.css"
+<!-- Font Awesome for icons -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+/>
 
+</head>
+<body>
+<div class="container">
+    <div class="tagline">✨ This is my first portfolio ✨</div>
+    <div class="header">
+     <img src="img1/IMG20241108081854.jpg" alt="Shaik subahan"/>
+      <div>
+        <h1>Shaik Subahan</h1>
+        <p class="about">
+        I’m a creative thinker who turns ideas into digital experiences through development and content creation. From editing reels to building websites, I enjoy learning new things every day and pushing my limits. With a strong vision to become an entrepreneur, trader, and YouTuber, this is just the beginning of my journey!
+        </p>
+      </div>
+    </div>
+
+    <h2>My Profile</h2>
+
+    <div class="section">
+      <div class="column">
+        <h3>Education</h3>
+        <ul>
+          <li><strong>CREC University</strong> – DIPLOMA-CSE</li>
+          <li><strong>NEW VIKAS EM SCHOOL</strong> – SCC-10TH </li>
+        </ul>
+     <ul class="socials">
+ <h2>Socials</h2>
+      <li>
+    <i class="fab fa-youtube"></i>
+    <a href="https://youtube.com/@dashgamerr?si=b2lz9ei_whDmnQc_" target="_blank">@dashgamerr</a>
+  </li>
+  <li>
+    <i class="fab fa-instagram"></i>
+    <a href="https://instagram.com/dashgamerr" target="_blank">@dashgamerr</a>
+  </li>
+</ul>
+      </div>
+
+      <div class="column">
+        <h3>Work Experience</h3>
+        <ul>
+          <li><strong>Content Creator-2023 to present</strong><br/>Creating and editing daily reels,Shorts and also iam focusing on web development to enhance my digital presence and future entrepreneur goals.</li><br>
+          <li><strong>Gamer - (Since 2018)</strong><br/>Building my identity as <b>DASHGamerr</b></li> and sharing gaming experiences acroos the world. 
+        </ul>
+      </div>
+    </div>
+
+    <h3>Skills</h3>
+<div class="skills">
+  <span>Content Creation</span>
+  <span>Web Development</span>
+  <span>Social Media Strategy</span>
+  <span>Gaming & Commentary</span>
+</div>
+    <div class="footer">
+      📞 +8886967626| ✉️subbu.786.subahan@gmail.com| 📺 DASHGamerr
+    </div>
+  </div>
+</body>
 </Html>
